--- a/composer.json
+++ b/composer.json
@@ -20,15 +20,16 @@
     "require": {
         "php": ">=8.0",
         "ext-json": "*",
-        "onix-systems-php/hyperf-core": "^1.0|dev-main",
-        "onix-systems-php/hyperf-actions-log": "^1.0|dev-main",
+        "onix-systems-php/hyperf-core": ">=1.0.5",
+        "onix-systems-php/hyperf-actions-log": "^1.0",
         "hyperf/database": "^2.2|^3.0",
         "hyperf/cache": "~2.2.0|^3.0",
-        "nesbot/carbon": "^2.0|^3.0",
         "hyperf/constants": "~2.2.0",
+        "hyperf/contract": "^2.2|^3.0",
         "hyperf/db-connection": "^2.2|^3.0",
+        "hyperf/translation": "^2.2|^3.0",
         "hyperf/validation": "^2.2|^3.0",
-        "yzen.dev/plain-to-class": "^1.0"
+        "hyperf/utils": "^2.2|^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.2|^3.0",
