--- a/composer.json
+++ b/composer.json
@@ -18,25 +18,25 @@
         }
     },
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "ext-json": "*",
-        "onix-systems-php/hyperf-core": ">=1.0.10",
-        "onix-systems-php/hyperf-actions-log": "^1.0",
-        "hyperf/database": "^2.2|^3.0",
-        "hyperf/cache": "~2.2.0|^3.0",
-        "hyperf/constants": "~2.2.0",
-        "hyperf/contract": "^2.2|^3.0",
-        "hyperf/db-connection": "^2.2|^3.0",
-        "hyperf/translation": "^2.2|^3.0",
-        "hyperf/validation": "^2.2|^3.0",
-        "hyperf/utils": "^2.2|^3.0"
+        "onix-systems-php/hyperf-core": ">=1.1.0",
+        "onix-systems-php/hyperf-actions-log": "^1.1",
+        "hyperf/database": "^3.0",
+        "hyperf/cache": "^3.0",
+        "hyperf/constants": "^3.0",
+        "hyperf/contract": "^3.0",
+        "hyperf/db-connection": "^3.0",
+        "hyperf/translation": "^3.0",
+        "hyperf/validation": "^3.0",
+        "hyperf/utils": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.2|^3.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": ">=7.0",
-        "swoole/ide-helper": "^4.5"
+        "swoole/ide-helper": "^4.5|^5.0"
     },
     "suggest": {
         "swow/swow": "Required to create swow components."
