--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,15 @@
     "require": {
         "php": ">=8.1",
         "ext-json": "*",
-        "onix-systems-php/hyperf-core": ">=1.1.0",
-        "onix-systems-php/hyperf-actions-log": "^1.1",
-        "hyperf/database": "^3.0",
-        "hyperf/cache": "^3.0",
-        "hyperf/constants": "^3.0",
-        "hyperf/contract": "^3.0",
-        "hyperf/db-connection": "^3.0",
-        "hyperf/translation": "^3.0",
-        "hyperf/validation": "^3.0",
-        "hyperf/utils": "^3.0"
+        "onix-systems-php/hyperf-core": ">=1.2.0",
+        "onix-systems-php/hyperf-actions-log": "^1.2",
+        "hyperf/database": "^3.1",
+        "hyperf/cache": "^3.1",
+        "hyperf/constants": "^3.1",
+        "hyperf/contract": "^3.1",
+        "hyperf/db-connection": "^3.1",
+        "hyperf/translation": "^3.1",
+        "hyperf/validation": "^3.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.2|^3.0",
